Mit Colab erstellt

--- a/if_else_hausaufgabe.ipynb
+++ b/if_else_hausaufgabe.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMguEPgeRLbuiNurWNB8iD2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,23 +58,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "54YQr9hA8i95"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "### Beispiel-Aufgabe zum Modulo-Operator (Division mit Rest)\n",
-        "Schreibe ein Programm, das eine Zahl überprüft und ausgibt, ob die Zahl durch 3 teilbar ist.\n",
-        "Modulo-Operator in Python --> `%`"
+        "Gewicht = float(input(\"Bitte gib dein Gewicht in kg ein:\"))\n",
+        "Grösse = float(input(\"Bitte gib deine Größe in Metern ein:\"))\n",
+        "\n",
+        "BMI = Gewicht / (Grösse ** 2)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "if BMI < 18.5:\n",
+        "  Überprüfung = \"Untergewicht\"\n",
+        "elif BMI < 25:\n",
+        "    Überprüfung = \"Normalgewicht\"\n",
+        "elif BMI < 30:\n",
+        "      Überprüfung = \"Übergewicht\"\n",
+        "else:\n",
+        "        Überprüfung = \"Adipositas\"\n",
+        "\n",
+        "print(\"BMI ist:\", round(BMI, 2))\n",
+        "print(\"BMI - Prüfung:\", Überprüfung)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Q-j4zOXLGJeP"
-      }
+        "id": "54YQr9hA8i95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0e888da-b304-4010-a52d-2bba046bae43"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bitte gib dein Gewicht in kg ein:60\n",
+            "Bitte gib deine Größe in Metern ein:1.54\n",
+            "BMI ist: 25.3\n",
+            "BMI - Prüfung: Übergewicht\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -93,7 +118,7 @@
         "id": "U1Vm_NNfGWMi",
         "outputId": "b933e2c4-8a3d-4f33-f962-1411a48f6acf"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,12 +143,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "jahr = int(input(\"Gib ein Jahr ein: \"))\n",
+        "\n",
+        "jahr = int(input(\"Gib ein Jahr ein: \"))\n",
+        "\n",
+        "if (jahr % 4 == 0 and jahr % 100 != 0) or (jahr % 400 == 0):\n",
+        "  print(\"Schaltjahr\")\n",
+        "else:\n",
+        "    print(\" kein Schaltjahr\")"
+      ],
       "metadata": {
-        "id": "Yj2Kb2rG8rhM"
+        "id": "Yj2Kb2rG8rhM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a8451fc-d8f1-4ea5-8b96-7ead99306a21"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gib ein Jahr ein: 1966\n",
+            "Gib ein Jahr ein: 1956\n",
+            "Schaltjahr\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -135,6 +183,36 @@
       "metadata": {
         "id": "aIckDaYu8sBi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Summe = float(input(\"Gib die Summe ein:\"))\n",
+        "Summe = float(input(\"Gib die Summe ein:\"))\n",
+        "if Summe > 100:\n",
+        "  print(\"Der Endpreis ist: \", Summe * 0.9)\n",
+        "else:\n",
+        "  print(\"Der Endpreis ist: \", Summe)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L3PS0BrlhXwp",
+        "outputId": "93889663-71aa-4c65-bb28-734c095364cc"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gib die Summe ein:120\n",
+            "Gib die Summe ein:120\n",
+            "Der Endpreis ist:  108.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -167,10 +245,57 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JOudTf8Q9aPJ"
+        "id": "oNgOCNU_sYNO"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "a = 42\n",
+        "b = 3.14\n",
+        "c = \"Hallo Welt\"\n",
+        "d = True\n",
+        "liste = [1,2,3]\n",
+        "t = (1,2)\n",
+        "dictionary = {\"name\":\"Max\", \"alter\": 22}\n",
+        "\n",
+        "\n",
+        "print(type(a))\n",
+        "print(type(b))\n",
+        "print(type(c))\n",
+        "print(type(d))\n",
+        "print(type(liste))\n",
+        "print(type(t))\n",
+        "print(type(dictionary))"
+      ],
+      "metadata": {
+        "id": "JOudTf8Q9aPJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ae924665-79ed-4b92-be6f-42c22a22a9e5"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'str'>\n",
+            "<class 'bool'>\n",
+            "<class 'list'>\n",
+            "<class 'tuple'>\n",
+            "<class 'dict'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -184,7 +309,15 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        " - a = int\n",
+        " - b = float\n",
+        " - c = str\n",
+        " - d = bool\n",
+        " - e = list\n",
+        " - f = tuple\n",
+        " - g = dict"
+      ],
       "metadata": {
         "id": "uM-IpReO9b_R"
       }
@@ -201,7 +334,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "\n",
+        "# Duck Typing\n",
+        "\n",
+        " - ist ein Konzept in der Programmierung\n",
+        " - wird gerne in Python verwendet\n",
+        " - bedeutet, dass man sich auf das Verhalten eines Objekts, anstatt auf seinen spezifischen Typ konzentriert\n",
+        "\n",
+        " ### Vorteile\n",
+        "  - hat den Vorteil Felxibel zu sein\n",
+        "  - erhöt Fehler im Programm zu finden\n",
+        "  - Wiederverwendbarkeit\n",
+        "  - verkürzte Entwicklungszeit\n",
+        "\n"
+      ],
       "metadata": {
         "id": "mOfhQQUK9lhu"
       }
