Mit Colab erstellt

--- a/Python_Grundlagen_mit_Story_und_Module.ipynb
+++ b/Python_Grundlagen_mit_Story_und_Module.ipynb
@@ -48,18 +48,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wFK069h7Mplu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wFK069h7Mplu",
+        "outputId": "bd6b7cae-b6be-41b3-bc88-965815d2063c"
       },
       "source": [
+        "# Konstante, also ein nicht veränderlicher Wert\n",
+        "OPERATING_SYSTEM = \"Windows\"\n",
+        "PI = 3.14\n",
+        "\n",
         "# Variable erstellen\n",
         "name = input(\"Wie heißt du? \")\n",
-        "alter = int(input(\"Wie alt bist du? \"))\n",
+        "alter = int(input(\"Wie alt bist du?(Bitte eine Zahl eingeben) \"))\n",
         "\n",
         "# Ausgabe mit f-String\n",
         "print(f\"Hallo {name}, willkommen in der geheimnisvollen Stadt! Du bist {alter} Jahre alt.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Wie heißt du? helen\n",
+            "Wie alt bist du?(Bitte eine Zahl eingeben) 27.5\n",
+            "Hallo helen, willkommen in der geheimnisvollen Stadt! Du bist 27.5 Jahre alt.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -79,7 +97,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "1. Es wird ein Eingabefenster aufgemacht, da darf der User was eingeben, die Eingabe wird dann als Wert (String) in der Variablen gespeichert\n",
+        "```python\n",
+        "variable = input(\"Gib was ein: \")\n",
+        "```\n",
+        "Dann wird ein Eingabefenster mit \"Gib was ein: \" aufgemacht beim Ausführen des Codes und das Eingegebene in `variable`gespeichert\n",
+        "2. Den Datentyp String, da die Eingabe als Zeichenfolge gespeichert wird. **Achtung** Wenn wir Zahlen eingeben wollen, nutz die Typecasting-Funktion, wie z.B. int(input(\"...\"))\n",
+        "3. siehe 2.\n",
+        "4. Mithilfe von f-Strings\n",
+        "```python\n",
+        "variable = \"inhalt\"\n",
+        "print(f\"Das ist die Variable {variable}\")\n",
+        "```\n"
+      ],
       "metadata": {
         "id": "SfWzuFbUcBYv"
       }
@@ -96,12 +127,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Variable wird auf einen Wert gesetzt\n",
+        "kurs = \"Informatik\"\n",
+        "thema = \"Python\"\n",
+        "print(f\"Der Kurs ist {kurs}, das aktuelle Thema ist {thema}\")\n",
+        "print(f\"Der Kurs ist {kurs}\")"
+      ],
       "metadata": {
-        "id": "58WB5GRBNtZS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "58WB5GRBNtZS",
+        "outputId": "3834de22-d141-4b8f-b777-ad9947b4804d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Der Kurs ist Informatik, das aktuelle Thema ist Python\n",
+            "Der Kurs ist Informatik\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Variable wird durch einen User-Input gefüllt\n",
+        "kurs = input(\"An welchen Kurs nimmst du teil? \")\n",
+        "thema = input(\"Welches Thema wird gerade behandelt? \")\n",
+        "print(f\"Der Kurs ist {kurs}, das aktuelle Thema ist {thema}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WywHT2xqvfDW",
+        "outputId": "773ac657-01c0-49a3-fdfc-218a1bbfafac"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "An welchen Kurs nimmst du teil? test\n",
+            "Welches Thema wird gerade behandelt? test\n",
+            "Der Kurs ist test, das aktuelle Thema ist test\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -130,19 +208,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "taxFuvtpMplv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "taxFuvtpMplv",
+        "outputId": "1bea8151-073f-47b6-c44b-a70bd75d25a9"
       },
       "source": [
         "# Import des Moduls random\n",
         "import random\n",
         "\n",
         "# Zufällige Zahl zwischen 1 und 10 generieren\n",
+        "# print(random.randint(1,4))\n",
         "zufallszahl = random.randint(1, 10)\n",
+        "#zufallszahl2 = random.randrange(1,10)\n",
         "\n",
         "print(f\"🎲 Zufällige Zahl: {zufallszahl}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "🎲 Zufällige Zahl: 8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -150,7 +243,17 @@
         "#### Aufgabe 2.1a\n",
         "1. Recherchiere nach Modulen. Warum wollen wir Module einbinden?\n",
         "2. Was macht das random-Modul?\n",
-        "3. Gibt es andere coole Module?"
+        "3. Gibt es andere coole Module?\n",
+        "- **flask**: Für Backend/APIs, die wir bauen wollen --> Webanwendungen\n",
+        "- **pytz**: Für Timezones\n",
+        "- **math**: Für mathematische Funktionen, wie z.B. Wurzelberechnungen, Cosinus, Sinus\n",
+        "- **numpy**: Für Matrizenberechnungen z.B.\n",
+        "- **pygame**: Für Spiele-Entwicklung\n",
+        "\n",
+        "**Achtung**: Bei den meisten Modulen müssen wir diese erst mithilfe des Paketverwaltungstools `pip`installieren\n",
+        "```bash\n",
+        "pip install flask\n",
+        "```\n"
       ],
       "metadata": {
         "id": "BDse4fcsNYxk"
@@ -165,6 +268,50 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "#### Aufgabe 2.1b\n",
+        "Implementiere eine Variable `time`, in der du das aktuelle Datum und die Uhrzeit speicherst. Dazu importierst du das Paket `datetime`. Gib außerdem den Wert der Variablen aus."
+      ],
+      "metadata": {
+        "id": "isK4exEJOESa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importiere das Modul datetime\n",
+        "import datetime\n",
+        "import pytz\n",
+        "\n",
+        "# setze timezone auf Berlin\n",
+        "tz = pytz.timezone('Europe/Berlin')\n",
+        "\n",
+        "# speichere Datum und Uhrzeit, nutze dabei die richtige Timezone\n",
+        "time = datetime.datetime.now(tz)\n",
+        "\n",
+        "\n",
+        "print(time.strftime(\"%Y-%m-%d %H:%M:%S\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fKW10JCROuAA",
+        "outputId": "5f599016-33d9-4d78-f899-df7e39185b8d"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2025-02-13 11:45:53\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "t4AkuUU4Mplv"
       },
@@ -176,31 +323,76 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fKW10JCROuAA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "#### Aufgabe 2.1b\n",
-        "Implementiere eine Variable `time`, in der du das aktuelle Datum und die Uhrzeit speicherst. Dazu importierst du das Paket `datetime`. Gib außerdem den Wert der Variablen aus."
+        "# importiere das random Modul\n",
+        "import random\n",
+        "\n",
+        "münz_liste = [\"Kopf\", \"Zahl\", \"Kante\", \"Brunnen\", \"Drachen\"]\n",
+        "zahlen_liste = [1,2,3,4,5,6,10,12,13]\n",
+        "namens_liste = [\"Zito\", \"Theo\", \"Thor\", \"Helen\"]\n",
+        "# Definiere Funktion münzwurf\n",
+        "def münzwurf(liste):\n",
+        "  return random.choice(liste)\n",
+        "\n",
+        "# Funktion aufrufen\n",
+        "print(f\"Die Ausgabe ist {münzwurf(münz_liste)}\")\n",
+        "print(münzwurf(zahlen_liste))\n",
+        "print(münzwurf(namens_liste))\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "isK4exEJOESa"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-m6gibvRN_oF",
+        "outputId": "60a9a9d3-d73e-40a8-b159-3fa1f804b580"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Die Ausgabe ist Kante\n",
+            "3\n",
+            "Thor\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# importieren das random Modul\n",
+        "import random\n",
+        "\n",
+        "# definiere Variable, also die liste\n",
+        "namens_liste = [\"Zito\", \"Theo\", \"Thor\", \"Helen\"]\n",
+        "zufälliger_name = random.choice(namens_liste)\n",
+        "namens_liste2 = [\"Najat\", \"Mirko\", \"Olga\", \"Tim\"]\n",
+        "zweiten_zufälligen_namen = random.choice(namens_liste2)\n",
+        "print(zufälliger_name)\n",
+        "print(zweiten_zufälligen_namen)\n"
+      ],
       "metadata": {
-        "id": "-m6gibvRN_oF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wZMwrno2z4JH",
+        "outputId": "3e0da19c-547e-4bcb-e470-e3d48d776893"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Helen\n",
+            "Olga\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -214,7 +406,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PwlB2iRCMplv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PwlB2iRCMplv",
+        "outputId": "996a07a8-997b-4c34-8b0d-bec7d5eacaa8"
       },
       "source": [
         "# Verschiedene Datentypen\n",
@@ -225,16 +421,68 @@
         "\n",
         "# Liste mit Items\n",
         "rucksack = [\"Seil\", \"Taschenlampe\", \"Goldmünze\", \"Apfel\"]\n",
+        "# Liste mit Namen\n",
+        "namens_liste = [\"Mateusz\", \"Jonas\", \"Nic\", \"Benjamin\"]\n",
+        "# Liste mit Zahlen\n",
+        "zahlen_liste = [1,5,2,8,9]\n",
+        "\n",
+        "# Wie kann ich Elemente zu Listen hinzufügen?\n",
+        "namens_liste.append(\"Mirko\")\n",
+        "print(namens_liste)\n",
+        "\n",
+        "namens_liste.remove(\"Benjamin\")\n",
+        "print(namens_liste)\n",
+        "\n",
+        "namens_liste.pop()\n",
+        "print(namens_liste)\n",
+        "\n",
+        "namens_liste.append(\"Theo\")\n",
+        "print(namens_liste)\n",
+        "\n",
+        "namens_liste.pop()\n",
+        "print(namens_liste)\n",
         "\n",
         "# Dictionary für Inventar mit Mengen\n",
-        "inventar = {\"Goldmünze\": 3, \"Schlüssel\": 1, \"Zaubertrank\": 2}\n",
+        "inventar = {\n",
+        "    \"Goldmünze\": 3,\n",
+        "    \"Schlüssel\": 1,\n",
+        "    \"Zaubertrank\": 2\n",
+        "    }\n",
+        "# Dictionary für meinen Charakter\n",
+        "character = {\n",
+        "    \"name\": \"helen\",\n",
+        "    \"klasse\": \"krieger\",\n",
+        "    \"HP\": 35,\n",
+        "    \"Gold\": 55.5\n",
+        "    }\n",
+        "print(f\"Mein ursprünglicher Charakter: {character}\")\n",
+        "character[\"name\"] = \"Hanno\"\n",
+        "print(f\"Nach der Veränderung dann: {character}\")\n",
+        "character[\"klasse\"] = \"Magier\"\n",
+        "print(character)\n",
         "\n",
         "# Aufgabe: Füge ein neues Item hinzu\n",
         "rucksack.append(\"Kompass\")  # Neues Item\n",
         "print(\"🎒 Dein Rucksack:\", rucksack)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Mateusz', 'Jonas', 'Nic', 'Benjamin', 'Mirko']\n",
+            "['Mateusz', 'Jonas', 'Nic', 'Mirko']\n",
+            "['Mateusz', 'Jonas', 'Nic']\n",
+            "['Mateusz', 'Jonas', 'Nic', 'Theo']\n",
+            "['Mateusz', 'Jonas', 'Nic']\n",
+            "Mein ursprünglicher Charakter: {'name': 'helen', 'klasse': 'krieger', 'HP': 35, 'Gold': 55.5}\n",
+            "Nach der Veränderung dann: {'name': 'Hanno', 'klasse': 'krieger', 'HP': 35, 'Gold': 55.5}\n",
+            "{'name': 'Hanno', 'klasse': 'Magier', 'HP': 35, 'Gold': 55.5}\n",
+            "🎒 Dein Rucksack: ['Seil', 'Taschenlampe', 'Goldmünze', 'Apfel', 'Kompass']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
