Mit Colab erstellt

--- a/Python_Grundlagen_mit_Story_und_Module.ipynb
+++ b/Python_Grundlagen_mit_Story_und_Module.ipynb
@@ -517,12 +517,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# definiere liste mit 3 gerichten\n",
+        "gerichte = [\"Pizza\", \"Sushi\", \"Spaghetti\"]\n",
+        "# print(gerichte)\n",
+        "lieblingsessen = {\n",
+        "    \"Theo\": \"Pizza\",\n",
+        "    \"Zito\": \"Steak\",\n",
+        "    \"Katja\": \"Lasagne\",\n",
+        "    \"Helen\": \"Ramen\"\n",
+        "}\n",
+        "\n",
+        "# print(lieblingsessen)\n",
+        "print(lieblingsessen[\"Katja\"])"
+      ],
       "metadata": {
-        "id": "Ix72w-CkPaah"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ix72w-CkPaah",
+        "outputId": "7ce2db2e-c217-4599-c382-d574a55945b8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lasagne\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -560,12 +585,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "gerichte.append(\"Steak\")\n",
+        "print(gerichte)\n",
+        "gerichte.append(\"Lasagne\")\n",
+        "gerichte.append(\"Ramen\")\n",
+        "gerichte += [\"Tomate\", \"Risotto\"]\n",
+        "print(gerichte)"
+      ],
       "metadata": {
-        "id": "daIxkaPcP3fW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "daIxkaPcP3fW",
+        "outputId": "2240ab74-5121-46a5-caab-c7ede4a1b416"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Pizza', 'Sushi', 'Spaghetti', 'Steak']\n",
+            "['Pizza', 'Sushi', 'Spaghetti', 'Steak', 'Lasagne', 'Ramen', 'Tomate', 'Risotto']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -579,12 +624,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "gerichte.remove(\"Risotto\")\n",
+        "print(gerichte)\n",
+        "gerichte.append(\"Reispfanne\")\n",
+        "print(gerichte)"
+      ],
       "metadata": {
-        "id": "gfuxneuTQD-Y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gfuxneuTQD-Y",
+        "outputId": "55e04109-add9-4fb3-b224-6e85619296ac"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Pizza', 'Sushi', 'Spaghetti', 'Steak', 'Lasagne', 'Ramen', 'Tomate']\n",
+            "['Pizza', 'Sushi', 'Spaghetti', 'Steak', 'Lasagne', 'Ramen', 'Tomate', 'Reispfanne']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(gerichte[5])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uarWNpIoG_qM",
+        "outputId": "1414f530-97d3-4664-ea8f-dc8935f48403"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ramen\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gerichte[0] = \"Döner\"\n",
+        "print(gerichte)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q4S7SiFvHjE8",
+        "outputId": "a68338d4-fed8-436c-d931-3ff2f997cbf3"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Döner', 'Sushi', 'Spaghetti', 'Steak', 'Lasagne', 'Ramen', 'Tomate', 'Reispfanne']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -598,12 +708,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lieblingsgericht = input(\"Was ist dein Lieblingsgericht? \")\n",
+        "\n",
+        "if lieblingsgericht in gerichte:\n",
+        "  print(f\"Das Gericht {lieblingsgericht} ist in der Liste enthalten\")\n",
+        "else:\n",
+        "  print(\"Das Gericht ist nicht in der Liste\")"
+      ],
       "metadata": {
-        "id": "kljhh3BbQJMp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kljhh3BbQJMp",
+        "outputId": "27b4e569-3ba0-4e36-a671-743ce01d84a2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Was ist dein Lieblingsgericht? Döner\n",
+            "Das Gericht Döner ist in der Liste enthalten\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -624,12 +754,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# definiere dictionary für die preise\n",
+        "preise = {\n",
+        "    \"Pizza\": 8,\n",
+        "    \"Spaghetti\": 10,\n",
+        "    \"Sushi\": 15,\n",
+        "    \"Salat\": 6\n",
+        "}\n",
+        "\n",
+        "teuerstes_Gericht = max(preise)\n",
+        "print(f\"Das teuerste Gericht ist {teuerstes_Gericht} mit einem Preis von {preise[teuerstes_Gericht]}\")\n",
+        "print(max(2,3))"
+      ],
       "metadata": {
-        "id": "BZQ3IZhrQfsL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BZQ3IZhrQfsL",
+        "outputId": "89dc530f-baaa-465c-8d5f-52fadd8fff9d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Das teuerste Gericht ist Sushi mit einem Preis von 15\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -643,12 +798,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "gerichte.sort()\n",
+        "print(gerichte)\n"
+      ],
       "metadata": {
-        "id": "PSwF-LZwQnxE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PSwF-LZwQnxE",
+        "outputId": "d0eb7174-2108-4a4c-e92d-c60ba8acd9cb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Döner', 'Lasagne', 'Ramen', 'Reispfanne', 'Spaghetti', 'Steak', 'Sushi', 'Tomate']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -662,12 +832,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "preise[\"Pizza\"] = 15\n",
+        "print(preise)"
+      ],
       "metadata": {
-        "id": "BURl6HuxQzo3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BURl6HuxQzo3",
+        "outputId": "8d878d5a-b9eb-4e25-e31f-fd21aaa6ba8d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Pizza': 15, 'Spaghetti': 10, 'Sushi': 15, 'Salat': 6, 'Döner': 10}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -732,7 +917,19 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Liste mit erlaubten Zutaten\n",
+        "geheime_zutaten = [\"Safran\", \"Trüffel\", \"Vanille\"]\n",
+        "\n",
+        "# Spieler gibt eine Zutat ein\n",
+        "zutat = input(\"Welche geheime Zutat möchtest du hinzufügen? \")\n",
+        "\n",
+        "# Bedingung prüfen\n",
+        "if zutat in geheime_zutaten:\n",
+        "    print(f\"✅ {zutat} ist perfekt! Hier ist das magische Rezept.\")\n",
+        "else:\n",
+        "    print(f\"❌ {zutat} ist nicht richtig! Der Koch schüttelt den Kopf.\")\n"
+      ],
       "metadata": {
         "id": "JMAnKsHjRsyA"
       },
@@ -800,7 +997,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def trank_brauen(zutat):\n",
+        "    print(f\"🧪 Du fügst {zutat} hinzu. Der Trank beginnt zu leuchten! ✨\")\n",
+        "\n",
+        "# Funktion aufrufen\n",
+        "trank_brauen(\"Drachenblut\")\n",
+        "trank_brauen(\"Einhornträne\")\n"
+      ],
       "metadata": {
         "id": "gENWb33wSBct"
       },
@@ -881,9 +1085,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Spieler gibt eine Essenswahl ein\n",
+        "essen = input(\"Was möchtest du kochen? (Suppe, Kuchen, Trank) \").lower()\n",
+        "\n",
+        "# Kontrollstruktur mit if-elif-else\n",
+        "if essen == \"suppe\":\n",
+        "    print(\"🥣 Du kochst eine wärmende Zaubersuppe!\")\n",
+        "elif essen == \"kuchen\":\n",
+        "    print(\"🎂 Dein Kuchen glitzert magisch!\")\n",
+        "elif essen == \"trank\":\n",
+        "    print(\"🧪 Dein Trank beginnt zu leuchten!\")\n",
+        "else:\n",
+        "    print(\"❌ Dieses Rezept kennst du nicht!\")\n"
+      ],
       "metadata": {
         "id": "WaQadDV4S5Rt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "essen = input(\"Was möchtest du kochen? (Suppe, Kuchen, Trank) \").lower()\n",
+        "\n",
+        "match essen:\n",
+        "    case \"suppe\":\n",
+        "        print(\"🥣 Du kochst eine wärmende Zaubersuppe!\")\n",
+        "    case \"kuchen\":\n",
+        "        print(\"🎂 Dein Kuchen glitzert magisch!\")\n",
+        "    case \"trank\":\n",
+        "        print(\"🧪 Dein Trank beginnt zu leuchten!\")\n",
+        "    case _:\n",
+        "        print(\"❌ Dieses Rezept kennst du nicht!\")\n"
+      ],
+      "metadata": {
+        "id": "YtlmwHcGAMfe"
       },
       "execution_count": null,
       "outputs": []
@@ -955,9 +1193,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Zutatenliste initialisieren\n",
+        "zutaten = []\n",
+        "\n",
+        "# for-Schleife, um 5 Zutaten hinzuzufügen\n",
+        "for i in range(1, 6):\n",
+        "    zutat = input(f\"🔮 Welche Zutat möchtest du als {i}. hinzufügen? \")\n",
+        "    zutaten.append(zutat)\n",
+        "    print(f\"✨ Du hast {zutat} in den Topf gegeben.\")\n",
+        "\n",
+        "print(\"🍲 Der Trank ist fertig! Hier sind deine Zutaten:\", zutaten)\n"
+      ],
       "metadata": {
         "id": "b-nBR1syTqrk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zutaten = []\n",
+        "max_zutaten = 5\n",
+        "\n",
+        "while len(zutaten) < max_zutaten:\n",
+        "    zutat = input(\"🔮 Welche Zutat möchtest du hinzufügen? (oder 'fertig' zum Aufhören) \")\n",
+        "\n",
+        "    if zutat.lower() == \"fertig\":\n",
+        "        print(\"🛑 Du hast den Brauprozess gestoppt.\")\n",
+        "        break\n",
+        "\n",
+        "    zutaten.append(zutat)\n",
+        "    print(f\"✨ Du hast {zutat} in den Topf gegeben. ({len(zutaten)}/{max_zutaten})\")\n",
+        "\n",
+        "print(\"🍲 Der Trank ist fertig! Hier sind deine Zutaten:\", zutaten)\n"
+      ],
+      "metadata": {
+        "id": "2ibrencgAQcU"
       },
       "execution_count": null,
       "outputs": []
