Mit Colab erstellt

--- a/D&D_MVP.ipynb
+++ b/D&D_MVP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLZPj+6zVOHagoVBDcbyFq",
+      "authorship_tag": "ABX9TyONm55RYxXGdCe1sbHw0imJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 🏰 D&D Abenteuer\n"
+        "# 🏰 D&D Abenteuer\n",
+        "## Die verborgene Sprache der Götter\n",
+        "In den dampfenden Regenwäldern der Smaragdküste liegt das Königreich Bytea, eine blühende Zivilisation, in der sich Magie und Technologie vermischen. Die Menschen hier verehren die alten Kodex-Götter, deren Schriften in einer vergessenen Sprache verfasst sind – einer Sprache, von der es heißt, sie könne den Geist erleuchten und das Universum formen. Doch nur wenige sind in der Lage, diese Sprache zu entziffern.\n",
+        "\n",
+        "Seit Jahrhunderten herrscht Frieden, doch dunkle Mächte drohen, das Gleichgewicht zu stören. Der uralte Bug-König Segfault, ein korrupter Magier, der einst ein brillanter Gelehrter der Kodex-Götter war, hat das sagenumwobene Script der unendlichen Schleife gestohlen. Mit diesem Artefakt kann er das Gefüge der Realität verzerren und die Zeit in ewiger Wiederholung fangen.\n",
+        "\n",
+        "Eine Prophezeiung besagt, dass nur jene, die das verlorene Wissen der Kodex-Götter meistern, Segfault aufhalten können. Und hier beginnt eure Reise.\n"
       ],
       "metadata": {
         "id": "rC0ulGGrX2BD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Kapitel 1\n"
+      ],
+      "metadata": {
+        "id": "0-Dhzgg7zMrD"
       }
     },
     {
@@ -54,7 +69,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 🎭 1. Charaktererstellung\n"
+        "## 🎭 1. Charaktererstellung\n",
+        "Unser Charakter soll folgende Attribute haben\n",
+        "```python\n",
+        "character = {\n",
+        "  \"name\": input\n",
+        "  \"klasse\": input\n",
+        "  \"spezies\": input\n",
+        "  \"Geschick\": random(5,20)\n",
+        "  \"Intelligenz\": random(5,20)\n",
+        "  \"Stärke\": random(5,20)\n",
+        "  \"HP\": 20\n",
+        "}\n"
       ],
       "metadata": {
         "id": "trQFt6lcYP-_"
@@ -62,12 +88,74 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "inventory_list = [\n",
+        "    \"⚔️ Rostiges Eisenschwert\",\n",
+        "    \"🛡️ Klapprige Holzrüstung\",\n",
+        "    \"🪵 Durchlöchertes Holzschild\",\n",
+        "    \"🔪 Stumpfes Messer\",\n",
+        "    \"🧪 Abgelaufener Lebenstrank\",\n",
+        "    \"🍵 Schimmeliger Zaubertrank\",\n",
+        "    \"💀 Stinkender Heiltrank\"\n",
+        "]\n",
+        "\n",
+        "def create_character():\n",
+        "  print(\"🎭 Erstelle deinen Charakter\")\n",
+        "  name = input(\"Wie heißt dein Held? \")\n",
+        "  klasse = input(\"Was ist deine Klasse? \")\n",
+        "  spezies = input(\"Was ist deine Spezies? \")\n",
+        "  character = {\n",
+        "      \"Name\": name,\n",
+        "      \"Klasse\": klasse,\n",
+        "      \"Spezies\": spezies,\n",
+        "      \"Geschick\": random.randint(5, 20),\n",
+        "      \"Intelligenz\": random.randint(5, 20),\n",
+        "      \"Stärke\": random.randint(5, 20),\n",
+        "      \"HP\": 20,\n",
+        "      \"Inventar\": random.choices(inventory_list, k=2)\n",
+        "  }\n",
+        "  #print(f\"Dein Charakter wurde erstellt!\")\n",
+        "  return character\n",
+        "\n",
+        "player = create_character()\n",
+        "# print(f\"Mein Name ist {player['Name']}, dabei bin ich von der Klasse {player['Klasse']} und habe {player['Stärke']} Stärke\")\n",
+        "#print(player[\"Name\"])\n",
+        "print(\"\\nDein Charakter:\")\n",
+        "for key, value in player.items():\n",
+        "  print(f\"{key}: {value}\")"
+      ],
       "metadata": {
-        "id": "FQXrKmLCYcd1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FQXrKmLCYcd1",
+        "outputId": "aaf9661d-c752-439e-b174-388cbc7d75d2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🎭 Erstelle deinen Charakter\n",
+            "Wie heißt dein Held? Helen\n",
+            "Was ist deine Klasse? Magier\n",
+            "Was ist deine Spezies? Elf\n",
+            "\n",
+            "Dein Charakter:\n",
+            "Name: Helen\n",
+            "Klasse: Magier\n",
+            "Spezies: Elf\n",
+            "Geschick: 14\n",
+            "Intelligenz: 15\n",
+            "Stärke: 11\n",
+            "HP: 20\n",
+            "Inventar: ['🔪 Stumpfes Messer', '🍵 Schimmeliger Zaubertrank']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
